# software-engineer-handbook

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
celery/: index.html
django/: index.html
docs/: celery.md  django.md  index.md  postgresql.md
postgresql/: index.html
search/: search_index.json
