[project]
name = "software-engineer-handbook"
version = "1.0.0"
description = "practical guide for most useful and common commands for software engineer"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
